--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Artifacts
+plugin/hhiroshell.github.com/v1/secretgenerator/SecretGenerator
