--- a/example/secret-generator/secret-generator.yaml
+++ b/example/secret-generator/secret-generator.yaml
@@ -3,7 +3,7 @@ kind: SecretGenerator
 metadata:
   name: secret-generator
 argsOneLiner: |
-  --name=exmaple-name
-  --namespace=example-namespace
-  --literal=hoge=fuga
-  --literal=foo=bar
+  --name exmaple-name
+  --namespace example-namespace
+  --literal hoge=fuga
+  --literal foo=bar
