add the line insertion transformer

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 
 # Artifacts
 plugin/hhiroshell.github.com/v1/secretgenerator/SecretGenerator
+plugin/hhiroshell.github.com/v1/lineinsertiontransformer/LineInsertionTransformer
