add a flag to remove the ancher line in LineInsertionTransformer

--- a/example/line-insertion-transformer/line-insertion-transformer.yaml
+++ b/example/line-insertion-transformer/line-insertion-transformer.yaml
@@ -4,5 +4,7 @@ metadata:
   name: line-insertion-transformer
 argsOneLiner: |
   --anchor "# insert here"
+  --remove-anchor
   --auto-indent
   --insertion piyo=hogera
+  --insertion hogehoge=fugafuga
